# RK-MRT2

./: .gitignore  CLAUDE.md  README.md  rkmrt2-tech-report.md  verify_all.py
demo/: generate.py
deploy/: convert_all.py  verify_rknn.py
docs/: rknn_constraints.py
export/: convert_rknn.py  export_onnx.py  rknn_config.py  verify_onnx.py  verify_static_onnx.py  verify_temporal_onnx.py
models/: __init__.py  config.py  depthformer.py  istft.py  spectrostream.py  spectrostream_encoder.py  transformer.py
runtime/: CMakeLists.txt  audio_engine.hpp  inference_engine.hpp  kv_cache.hpp  midi_parser.hpp  ring_buffer.hpp  rknn_model.hpp
runtime/demo/: main.cpp
runtime/tests/: test_kv_cache.cpp
spec/: training_inference_spec.py
tests/: test_e2e_codec.py  test_encoder.py  test_local_training.py  test_models.py  test_precision_bench.py
tools/: check_rknn_release.py
training/: codec_dataset.py  codec_loss.py  slurm_launch.sh  train_codec.py
weights/: convert_mrt2_weights.py
